--- a/school_management/Templates/Admin_Dashboard.html
+++ b/school_management/Templates/Admin_Dashboard.html
@@ -92,16 +92,35 @@
                     <td>+91-{{teacher.Contact}}</td>
                     <td>{{teacher.City}}</td>
                     <td>{{teacher.Salary}}</td>
-                    <td><a href="">
-                            <span class="material-symbols-outlined">
-                                visibility
-                            </span>
-                        </a>
-                        <a href="{% url 'delete_teacher' teacher.id %}">
-                            <span class="material-symbols-outlined">
-                                delete
-                            </span>
-                        </a>
+                    <td style="text-align: center;" class="flex">
+                        <div class="menu-item">
+                            <span class="material-symbols-outlined h-button">
+                                more_horiz
+                                </span>
+    
+                                <div class="menu-list">
+                                    <a href="">
+                                        <span class="material-symbols-outlined">
+                                            visibility
+                                        </span>
+                                        View
+                                    </a>
+            
+                                    <a title="Update" href="{% url 'update_teacher' teacher.id %}">
+                                        <span class="material-symbols-outlined">
+                                            edit_note
+                                        </span>
+                                        Update
+                                    </a>
+            
+                                    <a href="{% url 'delete_teacher' teacher.id %}">
+                                        <span class="material-symbols-outlined">
+                                            delete
+                                        </span>
+                                        Delete
+                                    </a>
+                                </div>
+                        </div>
                     </td>
                 </tr>
                 {% endfor %}
