Resumne Builder Project

--- a/school_management/Templates/Teacher_Navbar.html
+++ b/school_management/Templates/Teacher_Navbar.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="links">
-            <a href="" class="{% active_link '' 'active' %}"
+            <a href="{% url 'teacher_home' %}" class="{% active_link 'teacher' 'active' %}"
                 title="Home"><span class="material-symbols-outlined">
                     home
                 </span></a>
