--- a/school_management/Templates/Update_Forms/Question_Update.html
+++ b/school_management/Templates/Update_Forms/Question_Update.html
@@ -16,7 +16,7 @@
 
     <div class="form-container update-form d-flex align-items-center justify-content-center vh-100">
         <div class="form content w-50 shadow p-4 bg-white rounded">
-            <h3 class="text-center mb-5">Update Question({{question.id}})</h3>
+            <h3 class="text-center mb-3">Update Question No.{{question.id}}</h3>
             <form action="" class="g-3 row" method="post">
                 {% csrf_token %}
                 <div class="col-12">
