--- a/resume_builder_project/Templates/index.html
+++ b/resume_builder_project/Templates/index.html
@@ -1,13 +1,25 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/3edaddfde8.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{% static 'Style/Home.css' %}">
+    <link rel="stylesheet" href="{% static 'Style/Template1.css' %}">
+    <link rel="stylesheet" href="{% static 'Style/Template2.css' %}">
+    <!-- Option 1: Include in HTML -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
     <title>Resume Builder</title>
 </head>
 
 <body>
+    {% include "Pages/Navbar.html" %}
     <header>
         {% block header %}
 
@@ -16,19 +28,22 @@
 
     <section>
         {% block content %}
-          
-        {% endblock  %}
+
+        {% endblock %}
     </section>
 
     <footer>
         {% block footer %}
-          
-        {% endblock  %}
+
+        {% endblock %}
     </footer>
 
     {% block javascript %}
-      
-    {% endblock  %}
+
+    {% endblock %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
 </body>
 
