--- a/resume_builder_project/Templates/Pages/Navbar.html
+++ b/resume_builder_project/Templates/Pages/Navbar.html
@@ -1,7 +1,29 @@
-<nav class="navbar navbar-expand-lg bg-body-light">
+<nav class="navbar shadow navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a href="" class="navbar-brand">Resumo</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"><span></span></button>
+        <a href="" class="navbar-brand text-purple fw-bold fs-3">Resumo <i class="fa-brands fa-slack"></i></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav m-auto gap-3 fs-5 mb-2 mb-lg-0">
+                  <li class="nav-item">
+                        <a class="nav-link" href="" aria-current="page">Tools</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">FAQ</a>
+                    </li>
+                </ul>
+
+                <div class="d-flex gap-2">
+                    <button class="btn btn-md btn-transparent border border-2 border-secondary-subtle fw-bold">Login</button>
+                    <button class="btn btn-md btn-purple text-light fw-bold">Create Resume</button>
+                </div>
+
+            </div>
     </div>
 
 
