Resumne Builder Project

--- a/resume_builder_project/StaticFiles/Style/Home.css
+++ b/resume_builder_project/StaticFiles/Style/Home.css
@@ -10,6 +10,14 @@
 
 .btn-purple{
     background-color: var(--purple);
+    transition: all .5s ease-in-out ;
+}
+
+.btn-purple:hover{
+    /* border: 2px solid var(--purple); */
+    border-radius: 5px;
+    /* color: black; */
+    background-color: black;
 }
 
 .text-purple{
@@ -18,4 +26,16 @@
 
 .actives{
     color: var(--purple);
+}
+
+.hero, .how-work{
+    background-color: #4214b611;
+}
+
+.my-6{
+    margin: 6rem 0;
+}
+
+.py-6{
+    padding: 6rem 0;
 }
