--- a/resume_builder_project/Templates/Pages/Navbar.html
+++ b/resume_builder_project/Templates/Pages/Navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar shadow navbar-expand-lg bg-body-tertiary">
+<nav class="navbar px-5 navbar-sticky shadow navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
         <a href="" class="navbar-brand text-purple fw-bold fs-3">Resumo <i class="fa-brands fa-slack"></i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
