Resume Builder Project

--- a/resume_builder_project/Templates/Pages/Navbar.html
+++ b/resume_builder_project/Templates/Pages/Navbar.html
@@ -19,8 +19,8 @@
                 </ul>
 
                 <div class="d-flex gap-2">
-                    <button class="btn btn-md btn-transparent border border-2 border-secondary-subtle fw-bold">Login</button>
-                    <button class="btn btn-md btn-purple text-light fw-bold">Create Resume</button>
+                    <a class="btn btn-md btn-transparent border border-2 border-secondary-subtle fw-bold" href="">Login</a>
+                    <a class="btn btn-md btn-purple text-light fw-bold" href="{% url 'details_form' %}">Create Resume</a>
                 </div>
 
             </div>
